# moshimoshi

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
moshimoshi/: __init__.py
tests/: test_moshi.py
tests/samples/: __init__.py
