[tool.poetry]
name = "moshimoshi"
version = "0.1.0"
description = "call a function in any python scripts using a formated string or json"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
parse_with_dot_access = "^1.17.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
